--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/effects": "^19.1.0",
     "@ngrx/entity": "^19.1.0",
     "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
