--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "istl": "npm i --legacy-peer-deps",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
